deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook
  namespace: ecs-system
  labels:
    app: admission-webhook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admission-webhook
  template:
    metadata:
      labels:
        app: admission-webhook
    spec:
      containers:
      - name: admission-webhook
        image: ecs-system/admission-webhook:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: "/etc/kubernetes/pki"
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: admission-webhook-secrets
          items:
          - key: crt
            path: admission-webhook-tls.crt
          - key: key
            path: admission-webhook-tls.key
---
apiVersion: v1
kind: Service
metadata:
  name: admission-webhook
  namespace: ecs-system
spec:
  selector:
    app: admission-webhook
  ports:
    - port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-webhook
webhooks:
  - name: admission-webhook.ecs-system.svc
    failurePolicy: Ignore
    clientConfig:
      service:
        name: admission-webhook
        namespace: ecs-system
        path: /ecs/operator/cluster
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lKQUp5VUx1K09pT09vTUEwR0NTcUdTSWIzRFFFQkN3VUFNQjh4SFRBYkJnTlYKQkFNTUZHRmtiV2x6YzJsdmJpMTNaV0pvYjI5cklFTkJNQjRYRFRFNU1EWXhPREF6TkRVMU9Gb1hEVEU1TURjeApPREF6TkRVMU9Gb3dIekVkTUJzR0ExVUVBd3dVWVdSdGFYTnphVzl1TFhkbFltaHZiMnNnUTBFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDdUZvMHZja0VZZ0s2WkJjWGpQSWVtWnlmME94dVIKd2lTNVZmeW4yR2pFdDBrWTl6dHhRWm5UNkNFdytmM3BhaVZwQVN1bEVObjVzSVpyN2dDTHlLdE9DRzk4SWlUcwpKczR3V3NPVUVP [...]
    rules:
      - operations:
        - CREATE
        - UPDATE
        apiGroups:
        - ecs.yun.com
        apiVersions:
        - v1
        resources:
        - kubernetesclusters
